app/assets/stylesheets/modules-tables.css.scss
//= depend_on_asset "sort.png"
//= depend_on_asset "sort@2x.png"

@import 'mixins';

.table-heading {
  margin-bottom: .1em;
  color: #000;
  font: bold 20px "Open Sans Condensed", sans-serif;
}

.table-summary {
  padding: .5em 1em;
  @include border-radius(5px);
  margin-bottom: 1em;
  color: #000;
  background: $notice_bg;
}

.scroll-wrapper {
  position: relative;
  clear: left;
  overflow: visible;
}
.table-wrapper {
  position: relative;
  overflow: visible;
}
  @media screen and (max-width: 600px) {
    .table-wrapper {
      z-index: 3;
      padding-top: 20px;
      overflow: auto;

      h2 {
        margin-left: 10px;
      }
    }
    .scroll-wrapper {
      clear: both;
      margin-right: -10px;
      margin-left: -10px;

      .fade-right,
      .fade-left {
        position: absolute;
        top: 0;
        z-index: 1;
        width: 20px;
        height: 100%;
        margin-top: 10px;
        content: '';
        &:before {
          position: absolute;
          top: -10px;
          padding: 2px 4px;
          color: #fff;
          background-image: asset_url('bg-flag.png');
          content: "Scroll to see more";
          font-size: 12px;
          font-weight: bold;
          white-space: nowrap;
        }
      }
      .fade-left {
        left: 0;
        background:   -moz-linear-gradient(left, rgba(0,0,0,0.25), rgba(0,0,0,0));
        background:-webkit-linear-gradient(left, rgba(0,0,0,0.25), rgba(0,0,0,0));
        background:     -o-linear-gradient(left, rgba(0,0,0,0.25), rgba(0,0,0,0));
        background:    -ms-linear-gradient(left, rgba(0,0,0,0.25), rgba(0,0,0,0));
        background:        linear-gradient(left, rgba(0,0,0,0.25), rgba(0,0,0,0));
        &:before {
          left: 10px;
          padding-left: 10px;
          background-position: left center;
        }
      }
      .fade-right {
        right: 0;
        background:   -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25));
        background:-webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25));
        background:     -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25));
        background:    -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25));
        background:        linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.25));
        &:before {
          right: 10px;
          padding-right: 10px;
          background-position: right center;
        }
      }
      &.hard-left {
        .fade-left {
          display: none;
        }
      }
      &.hard-right {
        .fade-right {
          display: none;
        }
      }
    }
  }
@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) { 
  .scroll-wrapper {
    .fade-left,
    .fade-right {
      &:before {
        background-size: 160px 32px;
      }
    }
  }
}

table {
  min-width: 100%;
  border-collapse: collapse;
  font-size: 12px;
  &.js-fixed {
    z-index: auto;
    min-width: 0;
  }
}
@media screen and (max-width: 600px) {
  table {
    min-width: 900px;
  } 
}

thead {
  th {
    color: #000;
  }
}

caption {
  color: #000;
  font: bold 24px "Open Sans Condensed", sans-serif;
  text-align: left;
}

td,
th {
  padding: 4px 10px;
  font-size: 13px;
}

td {

  &.delete {
    white-space: nowrap;

    &:last-child {
      text-align: right;
    }

    .font-icon {
      font-size: 14px;
    }
  }

  input[type=submit] {
    margin-top: 0;
    margin-bottom: 0;
  }

  > input[type=datetime],
  > input[type=email],
  > input[type=search],
  > input[type=tel],
  > input[type=text],
  > input[type=number],
  > input[type=url],
  > input[type=password] {
    height: 24px;
    padding-right: 7px;
    padding-left: 7px;
    margin: 2px 0;
    font-size: 12px;

    &:focus {
      height: 28px;
      border-width: 2px;
      margin: 0;
    }
  }

}
@media screen and (max-width: 800px) {
  td {
    input[type=datetime],
    input[type=email],
    input[type=search],
    input[type=tel],
    input[type=text],
    input[type=number],
    input[type=url],
    input[type=password] {
      font-size: 16px;
    }
  }
}

table {
  .order-number {
    font-weight: 700;
  }
}

tbody {

  td {
    .order-number {
      font-weight: 700;
    }
  }
  tr{
    height: 40px;
    border-top: 1px solid #DDD;
    border-bottom: 1px solid #DDD;

    &:nth-child(odd) {
      background: #f9f9f9;
      background: rgba(0,0,0,0.025);
    }
    &:hover {
    }
    &.destructive {
      background: #fdd;

      > .delete a,
      > .delete button {
        color: $alert_text;
      }
    }
  }
}

.product-header-delete {
  margin-top: 5px;
  float: right;

  .font-icon {
    font-size: 18px;
  }
}


.no-touch {
  tbody:not(.order-summary) {
    tr:not(.destructive):hover {
      background: #D8EED2;
    }
  }
  .order-summary:hover {
    background: #D8EED2;
  }
}

.market-org-list {
  margin: 0 0 30px;

  .name {
    font-weight: 700;
  }
}

th {
  font-weight: bolder;
  font-weight: 600;
  text-align: left;
  &[scope=row] {
    font-weight: normal;
  }
}

.lot {
  > td {
    vertical-align: top;
    white-space: nowrap
  }
}
.price {
  > td:last-child {
    padding-right: 10px;
    text-align: right;
  }

  &.odd,
  &.odd + .fields_price {
    background: #f4f4f4;
  }
  .edit {
    white-space: nowrap;
  }
  .edit-price > .font-icon {
    font-size: smaller;
  }
  .edit-price + .delete {
    margin-left: 1.5em;
  }
}

.pricing {
  font-size: 12px;

  > ul {
    margin: 0;
  }
}
/* ... */

